syntax = "proto2";

import "common.proto";
option java_multiple_files = true;
option java_package = "com.yuandian.data.message";

message PItem {
    optional int32 sdId = 1;
}

message PGetUserInfo {
    optional int64 userId = 1;
    optional string name = 2;
}